force-app/main/default/objects/Int_Collateral__c/Int_Collateral__c.object-meta.xml
<CustomObject>
    <description>Int Collateral</description>
    <label>Int Collateral</label>
    <nameField>
        <displayFormat>COL-{0000000000}</displayFormat>
        <label>Collateral Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Int Collaterals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>