force-app/main/default/objects/Int_Collateral__c/fields/Coll_Government_Type_Code__c.field-meta.xml
<CustomField>
    <fullName>Coll_Government_Type_Code__c</fullName>
    <description>Coll Government Type Code</description>
    <label>Coll Government Type Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>