force-app/main/default/objects/Int_Collateral__c/fields/Coll_Maturity_Date__c.field-meta.xml
<CustomField>
    <fullName>Coll_Maturity_Date__c</fullName>
    <description>Coll Maturity Date</description>
    <label>Coll Maturity Date</label>
    <type>Date</type>
</CustomField>