force-app/main/default/objects/Int_Collateral__c/fields/Coll_Original_Amount__c.field-meta.xml
<CustomField>
    <fullName>Coll_Original_Amount__c</fullName>
    <description>Coll Original Amount</description>
    <label>Coll Original Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>