force-app/main/default/objects/Int_Collateral__c/fields/Coll_Original_Valuation_Date__c.field-meta.xml
<CustomField>
    <fullName>Coll_Original_Valuation_Date__c</fullName>
    <description>Coll Original Valuation Date</description>
    <label>Coll Original Valuation Date</label>
    <type>Date</type>
</CustomField>