force-app/main/default/objects/Int_Collateral__c/fields/Coll_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Coll_Percentage__c</fullName>
    <description>Coll Percentage</description>
    <label>Coll Percentage</label>
    <precision>9</precision>
    <scale>6</scale>
    <type>Percent</type>
</CustomField>