force-app/main/default/objects/Int_Collateral__c/fields/Coll_Valuation_Type_Code__c.field-meta.xml
<CustomField>
    <fullName>Coll_Valuation_Type_Code__c</fullName>
    <description>Coll Valuation Type  Code</description>
    <label>Coll Valuation Type  Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>