force-app/main/default/objects/Int_Collateral__c/fields/Collateral_Source_System__c.field-meta.xml
<CustomField>
    <fullName>Collateral_Source_System__c</fullName>
    <description>Collateral Source System</description>
    <label>Collateral Source System</label>
    <length>50</length>
    <type>Text</type>
</CustomField>