force-app/main/default/objects/Int_Collateral__c/fields/Colleteral_Amount__c.field-meta.xml
<CustomField>
    <fullName>Colleteral_Amount__c</fullName>
    <description>Colleteral Amount</description>
    <label>Colleteral Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>