force-app/main/default/objects/Int_Collateral__c/fields/Net_Residual_Value__c.field-meta.xml
<CustomField>
    <fullName>Net_Residual_Value__c</fullName>
    <description>Net Residual Value</description>
    <label>Net Residual Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>