force-app/main/default/objects/Int_Collateral__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Collateral_Source_System__c</columns>
    <columns>Collateral_Number__c</columns>
    <columns>Collateral_Type__c</columns>
    <columns>Currency_Code__c</columns>
    <columns>Colleteral_Amount__c</columns>
    <columns>Global_Master_Asset_Type__c</columns>
    <columns>Net_Residual_Value__c</columns>
    <columns>Coll_Percentage__c</columns>
    <columns>Coll_Maturity_Date__c</columns>
    <columns>Coll_Original_Valuation_Date__c</columns>
    <columns>Coll_Valuation_Date__c</columns>
    <columns>Coll_Original_Amount__c</columns>
    <columns>Coll_Valuation_Type_Code__c</columns>
    <columns>Coll_Valuation_Approach_Code__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>